gnome-shell (3.25.91-1) UNRELEASED; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release
  * debian/control.in:
    - Drop obsolete Build-Depends against telepathy-glib
    - Bump minimum mutter to 3.24.0, gjs to 1.47.90
    - Depend on gir1.2-geoclue-2.0 and gir1.2-rsvg-2.0
    - Depend on caribou (LP: #1589240)
    - Recommend chrome-gnome-shell
    - Recommend switcheroo-control for dual GPU support
  * Drop 3.14 upgrade hack, not needed after stretch
  * Drop 50-extension-reload-fail.patch: applied in new release

  [ Simon McVittie]
  * Drop Telepathy g-i bindings from Depends to Suggests now that they
    are runtime-optional upstream

 -- Simon McVittie <smcv@debian.org>  Tue, 04 Apr 2017 09:24:23 +0100

gnome-shell (3.22.3-3) unstable; urgency=medium

  * debian/patches/50-extension-reload-fail.patch:
    - Add patch to fix a bug where extensions could be left enabled in the
      lock screen.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 26 Apr 2017 18:47:56 +0200

gnome-shell (3.22.3-2) unstable; urgency=medium

  * d/control: Drop dependency on telepathy-mission-control-5. GNOME Shell
    has special integration for Telepathy if present, but does not depend
    on it. (Closes: #853908)
  * d/gnome-shell.gsettings-override: Do not force Empathy to be considered
    a favourite app

 -- Simon McVittie <smcv@debian.org>  Wed, 01 Mar 2017 12:03:55 +0000

gnome-shell (3.22.3-1) unstable; urgency=medium

  * New upstream release.
  * Drop patches which have been merged upstream.

 -- Michael Biebl <biebl@debian.org>  Sat, 18 Feb 2017 06:44:37 +0100

gnome-shell (3.22.2-4) unstable; urgency=medium

  * Team upload.
  * Work around upgrades not being done offline:
    - Ship a copy of the process-working spinner animation from Shell
      3.14.x, and install it where Shell 3.14.x would expect to find it.
      This avoids a code path where the lock screen would fail to unlock
      because the animation code didn't cope with inability to load the