@@ -3,7 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: debhelper (>= 10),
+Build-Depends: debhelper (>= 10.3~),
                gnome-control-center-dev (>= 1:3.4),
                gnome-pkg-tools (>= 0.11),
                gettext,
@@ -42,6 +42,7 @@ Build-Depends: debhelper (>= 10),
                libxfixes-dev,
                libxml2-dev,
                mesa-common-dev,
+               meson (>= 0.42),
                python3,
 Standards-Version: 3.9.8
 Homepage: https://wiki.gnome.org/Projects/GnomeShell
