@@ -9,22 +9,18 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,-z,defs -Wl,-O1 -Wl,--as-needed
 DEB_LDFLAGS_MAINT_APPEND += -Wl,--disable-new-dtags
 
 %:
-	dh $@ --with gir,gnome
-
-override_dh_autoreconf:
-	dh_autoreconf --as-needed
+	dh $@ --with gir,gnome --buildsystem=meson
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
 CONFFLAGS = \
-	--enable-networkmanager \
-	--enable-systemd
+	-Denable-networkmanager=yes \
+	-Denable-systemd=yes
 endif
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--libdir=/usr/lib \
 		--libexecdir="\$${libdir}/gnome-shell" \
-		--enable-compile-warnings \
 		$(CONFFLAGS)
 
 override_dh_install:
@@ -37,12 +33,6 @@ override_dh_makeshlibs:
 override_dh_shlibdeps:
 	# gnome-shell uses mutters private mutter-clutter-1.0.so etc.
 	dh_shlibdeps -l"usr/lib/$(DEB_HOST_MULTIARCH)/mutter"
-
-override_dh_girepository:
-	dh_girepository \
-		-l src:src/gvc \
-		-p /usr/lib/$(DEB_HOST_MULTIARCH)/mutter \
-		/usr/lib/gnome-shell
 
 override_dh_strip:
 	dh_strip --dbgsym-migration='gnome-shell-dbg (<< 3.20.2-2~)'
